[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "chroma-blotch-corrector"
version = "1.0"
description = "Standalone chroma blotch correction tool for astrophotography"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
license-files = ["LICENSE"]
authors = [
  { name = "Alexey Zaytsev", email = "lonelylockley@gmail.com" },
]
dependencies = [
  "numpy",
  "scipy",
  "matplotlib",
  "tifffile",
  "scikit-image",
  "astropy",
  "PyQt6",
]

[project.urls]
Homepage = "https://github.com/lonely-lockley/chroma-blotch-corrector"
Repository = "https://github.com/lonely-lockley/chroma-blotch-corrector"
Issues = "https://github.com/lonely-lockley/chroma-blotch-corrector/issues"

[project.scripts]
chroma-blotch-corrector = "chroma_blotch_correction:cli"

[tool.setuptools]
py-modules = ["chroma_blotch_correction"]
