[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "color-mottle-corrector"
version = "1.1"
description = "Standalone color mottle correction tool for astrophotography"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
license-files = ["LICENSE"]
authors = [
  { name = "Alexey Zaytsev", email = "lonelylockley@gmail.com" },
]
dependencies = [
  "numpy",
  "scipy",
  "matplotlib",
  "tifffile",
  "scikit-image",
  "astropy",
  "PyQt6",
]

[project.urls]
Homepage = "https://github.com/lonely-lockley/color-mottle-corrector"
Repository = "https://github.com/lonely-lockley/color-mottle-corrector"
Issues = "https://github.com/lonely-lockley/color-mottle-corrector/issues"

[project.scripts]
color-mottle-corrector = "color_mottle_correction:cli"

[tool.setuptools]
py-modules = ["color_mottle_correction"]
